labs/lab2/testsuite/bad/cmp_if_bool_lt_bool.cc
int main () {
	if (false < true) { } else { }
	return 0;
}
